# SentimentAnalysis_Airlines

./: Dockerfile  README.md  README.md.md  main.py  pyproject.toml  readme.ipynb  requirements.txt
capsenv/: pyvenv.cfg
capsenv/Scripts/: activate  activate.bat  jsonpointer
data/: airline_tweets_test.csv  airline_tweets_train.csv
models/: model.pkl
notebook/: LoanPaybackNB.ipynb  notebook.ipynb  notebook_v1.ipynb  notebook_v2.ipynb
src/: feature_engineering.py  featureproc.py  predict.py  train.py
